--- a/Basic_HTML_and_CSS/HTML_Table.html
+++ b/Basic_HTML_and_CSS/HTML_Table.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html land="en">
+<html lang="en">
 	<title>HTML Table</title>
 	<link rel="stylesheet" type="text/css" href="CSS_Table.css">
 	<body>
-		<h1>Random National Parks Table</h1>
+		<!-- added <em> tag -->
+		<h1><em>Random National Parks Table</em></h1>
+			<!-- added link that opens in new tab -->
+			<a href="HTML_Form.html" target="new">HTML Form</a><br><br>
 		<table style="width:60%">
 			<tr>
 				<th>Name</th>
