Adds CSS to one_page_website.html

--- a/Basic_HTML_and_CSS/One-Page Website/one_page_website.html
+++ b/Basic_HTML_and_CSS/One-Page Website/one_page_website.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>National Parks Fan</title>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="./css/one_page_website.css">
 	</head>
 	<body>
 		<!-- NAV -->
@@ -155,7 +156,8 @@
 					</article>
 					<!-- END PHOTO CONTAINER 4 -->
 		<!-- END GALLERY -->
-		</section>			
+		</section>
+		<!-- GALLERY END -->			
 		<br>
 		<!-- CONTACT -->
 			<div id="news">
